# taskmgt

./: .gitignore  Dockerfile.api  Dockerfile.react  Dockerfile.test  Makefile  README.md  compose.yaml  import_rtm.py  nginx.react.conf  pyproject.toml
.github/workflows/: build.yml
docs/: api.md  rtm-import-prompt.md
k8s/: api.yaml  frontend.yaml  ingress.yaml  namespace.yaml  pvc.yaml
react-src/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
react-src/public/: manifest.json
react-src/src/: App.jsx  api.js  main.jsx
react-src/src/components/: ActionBar.jsx  CaptureView.jsx  MainPanel.jsx  MobileShell.jsx  Sidebar.jsx  SmartAddBar.jsx  TaskDetail.jsx  TaskList.jsx
react-src/src/hooks/: index.js
skills/: SKILL.md
src/taskapi/: __main__.py  db.py  filters.py  main.py  migrations.py  models.py  mqtt.py  parser.py
src/taskcli/: __init__.py
tests/: conftest.py  steps.py  test_close_task.py  test_crud.py  test_filter_dsl.py  test_navigation.py  test_task_detail.py
tests/api/: conftest.py  test_filter_dsl.py  test_parser.py  test_search.py  test_tasks.py  test_taxonomy.py
tests/features/: close_task.feature  crud.feature  filter_dsl.feature  navigation.feature  task_detail.feature
