[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskmgt"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "dateparser>=1.2",
    "aiomqtt>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-bdd>=7",
    "playwright>=1.44",
    "pytest-playwright>=0.5",
    "httpx>=0.27",
]
cli = [
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
tm = "taskcli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/taskapi", "src/taskcli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
